<resources>
    <string name="app_name">PhaseShift17</string>
    <string name="content_description">Content Description</string>
    <string name="countdown_note">Thanks for checking out the Countdown Timer.\n\nThis timer is
		ideal for use in counting down an event start date, down to the second!!  Feel free to
		use it in your app.</string>
    <string name="days">days</string>
    <string name="hours">hrs</string>
    <string name="minutes">mins</string>
    <string name="seconds">secs</string>
    <string name="title_activity_countdown_timer">CountdownTimerActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_menu_github">View on GitHub</string>
    <string name="title_menu_reset_first_start">Reset "First start" flag</string>

    <string name="label_options">Options:</string>
    <string name="label_option_fullscreen">Enable fullscreen</string>
    <string name="label_option_scrollable">Scrollable slides</string>
    <string name="label_option_custom_fragments">Enable custom fragments</string>
    <string name="label_option_permissions">Enable permission request</string>
    <string name="label_option_show_back">Show back button</string>
    <string name="label_option_show_next">Show next button</string>
    <string name="label_option_skip_enabled">Enable skip button</string>
    <string name="label_option_finish_enabled">Enable finish button</string>
    <string name="label_option_get_started_enabled">Enable \"Get Started\" button</string>
    <string name="label_start_intro">Start intro</string>
    <string name="label_or">or</string>
    <string name="label_demos">Demos: </string>
    <string name="label_start_canteen">\"Canteen\" intro</string>
    <string name="label_start_splash">Splash screen</string>

    <string name="title_material_metaphor">PhaseShift is back !</string>
    <string name="title_material_bold"></string>
    <string name="title_material_motion">Events, workshops and more.</string>
    <string name="title_material_shadow">Light and shadow</string>

    <string name="description_material_metaphor"></string>
    <string name="description_material_bold"></string>
    <string name="description_material_motion"></string>
    <string name="description_material_shadow">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.</string>

    <string name="title_permissions">Requesting permissions was never easier.</string>
    <string name="description_permissions">This app needs the camera and storage permission.\nIt\'s only to show how permission requests work in this library and we won\'t do anything with the granted permissions.</string>
    <string name="label_grant_permissions">Please grant the permissions before proceeding.</string>

    <string name="label_button_cta">Click me!</string>
    <string name="toast_button_cta">Hey, that\'s how custom CTA buttons work in material-intro!</string>

    <string name="title_fragment_login">This is a custom fragment.</string>
    <string name="hint_fake_username">Fake username</string>
    <string name="hint_fake_password">Fake password</string>
    <string name="label_fake_login">Fake login</string>
    <string name="label_fake_login_loading">Loading…</string>
    <string name="label_fake_login_success">Logged in ☺</string>
    <string name="label_fake_login_success_message">Successfully faked login.</string>
    <string name="label_fill_out_form">Please fill out the form before proceeding.</string>

    <string name="title_fragment_custom">Take off!</string>

    <string name="label_activity_finish">Nothing here…\n…just a demo how to create a splash screen intro.</string>

    <string name="title_canteen_intro1" translatable="false">Menus right on your screen</string>
    <string name="title_canteen_intro2" translatable="false">Cash on delivery</string>
    <string name="title_canteen_intro3" translatable="false">Choose what you like</string>
    <string name="description_canteen_intro1" translatable="false">Looking for something to eat? Just browse the feed wherever you are.</string>
    <string name="description_canteen_intro2" translatable="false">Order and we\'ll deliver the menu right in front of your door.</string>
    <string name="description_canteen_intro3" translatable="false">Bookmark a menu you wanted to save and keep track of its status whether it\'s available or not.</string>
    <string name="label_button_cta_canteen_intro" translatable="false">Get started</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_about_ps">AboutPSActivity</string>
    <string name="title_activity_about_bms">AboutBMSActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_basic">basicActivity</string>
    <string name="title_activity_workshop_detail">WorkshopDetailActivity</string>
    <string name="title_activity_filtered_events">FilteredEvents</string>
</resources>
